# third_party_libffi

./: BUILD.gn  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  fficonfig.h
include/: ffi-riscv64.h  ffi.h  ffitarget-riscv64.h  ffitarget.h
patch/: backport-Fix-check-for-invalid-varargs-arguments-707.patch  backport-Fix-signed-vs-unsigned-comparison.patch  backport-openharmony-adapt.patch  backport-x86-64-Always-double-jump-table-slot-size-for-CET-71.patch  fix-AARCH64EB-support.patch  libffi-Add-sw64-architecture.patch  riscv-extend-return-types-smaller-than-ffi_arg-680.patch
